--- a/asset/index.less
+++ b/asset/index.less
@@ -1,8 +1,8 @@
 .oxmod-act-product-list{
 /* CSS */
 	ul{
-		display: flex;
-		flex-wrap:wrap;
+		display: -webkit-flex;
+		-webkit-flex-wrap:wrap;
 		justify-content: space-between;
 		padding: 5px;
 		background-color: #f06;
