--- a/asset/index.less
+++ b/asset/index.less
@@ -3,7 +3,7 @@
 	ul{
 		display: -webkit-flex;
 		-webkit-flex-wrap:wrap;
-		justify-content: space-between;
+		-webkit-justify-content: space-between;
 		padding: 5px;
 		background-color: #f06;
 	}
